<resources>
    <string name="app_name">RecipeApp</string>
    <string name="text_category">Категории</string>
    <string name="text_favourites">Избранное</string>
    <string name="add_to_favourites">Добавить %1$s в избранное</string>
    <string name="remove_from_favourites">Удалить %1$s из избранного</string>
    <string name="text_category_description">Описание категории</string>
    <string name="text_image_description">Изображение категории %1$s</string>
    <string name="text_image_recipe_description">Изображение рецепта %1$s</string>
    <string name="text_ingredients">Ингредиенты</string>
    <string name="text_cooking_method">Способ приготовления</string>
    <string name="text_servings_seekbar">Порции: %1$s</string>
    <string name="text_favorites">Вы еще не добавили ни одного рецепта в избранное</string>
    <string name="error_retrieving_data">Ошибка получения данных</string>
    <string name="error_loading_image">Ошибка загрузки изображения</string>
    <string name="error_network">Ошибка сети</string>
</resources>