<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivHeaderRecipe"
                android:layout_width="match_parent"
                android:layout_height="@dimen/category_image_224"
                android:background="@drawable/shape_rounded_label"
                android:contentDescription="@string/text_image_recipe_description"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/bcg_categories" />

            <TextView
                android:id="@+id/tvLabelRecipe"
                style="@style/StyleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/main_space_16"
                app:layout_constraintBottom_toBottomOf="@+id/ivHeaderRecipe"
                app:layout_constraintStart_toStartOf="@+id/ivHeaderRecipe"
                tools:text="Бургер с грибами \nи сыром" />

            <ImageButton
                android:id="@+id/btnHeartFavourites"
                android:layout_width="@dimen/btn_heart_40"
                android:layout_height="@dimen/btn_heart_40"
                android:layout_margin="@dimen/main_space_16"
                android:background="@android:color/transparent"
                android:contentDescription="@string/add_to_favourites"
                android:foreground="?attr/selectableItemBackground"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivHeaderRecipe"
                tools:src="@drawable/ic_heart" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvIngredientsTitle"
            style="@style/StyleTitle20Caps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/main_space_16"
            android:layout_marginTop="@dimen/main_space_16"
            android:text="@string/text_ingredients"
            android:textSize="@dimen/text_size_20" />


        <TextView
            android:id="@+id/tvSeekBarServings"
            style="@style/StyleTitle16Semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/main_space_16"
            android:layout_marginVertical="@dimen/text_space_6"
            android:text="@string/text_servings_seekbar" />

        <SeekBar
            android:id="@+id/seekBar"
            style="@style/styleSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="5"
            android:min="1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_space_16"
            android:background="@drawable/shape_rounded_label"
            android:backgroundTint="@color/white_color"
            android:padding="@dimen/main_space_half_8"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_ingredient" />

        <TextView
            android:id="@+id/tvMethodTitle"
            style="@style/StyleTitle20Caps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/main_space_16"
            android:text="@string/text_cooking_method"
            android:textSize="@dimen/text_size_20" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_space_16"
            android:background="@drawable/shape_rounded_label"
            android:backgroundTint="@color/white_color"
            android:padding="@dimen/main_space_half_8"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_method" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>